[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/graphics/Entities/player.png" type="Texture" id=1]
[ext_resource path="res://src/Entities/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Entities/Gun.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15.4929, 32.0944 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Walking"
frame = 5
playing = true

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 24.6719, 0 )
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="FloorCollider" type="RayCast2D" parent="."]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="BoostTimer" type="Timer" parent="."]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
